--- a/demo/index.html.erb
+++ b/demo/index.html.erb
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <meta name="viewport" value="width=device-width">
-    <link rel="stylesheet" href="/demo/reset.css">
-    <link rel="stylesheet" href="/demo/style.css">
-    <script src="/demo/vendor/modernizr.min.js"></script>
+    <link rel="stylesheet" href="demo/reset.css">
+    <link rel="stylesheet" href="demo/style.css">
+    <script src="demo/vendor/modernizr.min.js"></script>
     <style>
       <%= styles %>
     </style>
@@ -53,8 +53,8 @@
         </footer>
       </div>
     </div>
-    <script src="/demo/vendor/jquery.min.js"></script>
-    <script src="/dist/floatLabel.min.js"></script>
+    <script src="demo/vendor/jquery.min.js"></script>
+    <script src="dist/floatLabel.min.js"></script>
     <script>
       if (Modernizr.input.placeholder) {
         $('body').floatLabels();
