--- a/demo/behaviors/from-right.css
+++ b/demo/behaviors/from-right.css
@@ -1,8 +1,8 @@
-.flabel__label--from-right {
+.fly__label--from-right {
   left: 5em;
   opacity: 0;
 }
-.flabel__label--from-right.flabel__label--active {
+.fly__label--from-right.fly__label--active {
   left: 0%;
   opacity: 1;
 }
