Update demo copy and readme contributing section

--- a/demo/index.html.erb
+++ b/demo/index.html.erb
@@ -17,9 +17,10 @@
         <section class="intro">
           <h1 class="intro__heading">flyLabel.js</h1>
           <p>
-            This is the <a href="https://github.com/athaeryn/flyLabel.js">flyLabel.js</a>
-            demo. The CSS defines the behavior of the labels. Behaviors
-            authored by Mike Anderson unless otherwise stated.
+            Flexible floating form labels to make your boring placeholders <em>super fly</em>.
+            Based on the <a href="http://mattdsmith.com/float-label-pattern/">FloatLabel</a> pattern by Matt Smith.
+            With flyLabel.js, it's easy to trigger custom behaviors on form labels.
+            Check out the examples, and <a href="https://github.com/athaeryn/flyLabel.js#contributing">contribute your own</a>.
           </p>
         </section>
         <%
